--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button onclick="showCategory('vtuber')">VTuber</button>
         <button onclick="showCategory('science')">科学・テクノロジー</button>
         <button onclick="showCategory('history')">歴史・地理</button>
-        <button onclick="showCategory('sexy')">セクシー</button>
+        <button onclick="showCategory('cute')">かわいい</button>
     </div>
 
     <div id="video-container">
