--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>おすすめYoutube動画</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="blog1_style.css">
+    <script defer src="blog1_script.js"></script>
 </head>
 <body>
     <h1>おすすめYoutube動画</h1>
