--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>シックなYouTube動画紹介</title>
+    <title>明るいYouTube動画紹介</title>
     <link rel="stylesheet" href="blog1_style.css">
     <script defer src="blog1_script.js"></script>
 </head>
 <body>
     <header class="hero">
-        <h1>🎬 シックなYouTube動画紹介</h1>
+        <h1>🎬 おすすめYouTube動画</h1>
+        <p>最新の面白い動画をジャンル別に紹介！</p>
     </header>
 
     <div class="genre-container">
