--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     <div class="genre-container">
         <div class="genre-scroll">
             <button class="genre-btn" onclick="showCategory('entertainment')">エンタメ</button>
-            <button class="genre-btn" onclick="showCategory('vtuber')">VTuber</button>
+            <button class="genre-btn" onclick="showCategory('history')">歴史・地理・文化</button>
             <button class="genre-btn" onclick="showCategory('science')">科学・テクノロジー</button>
-            <button class="genre-btn" onclick="showCategory('history')">歴史・地理</button>
+            <button class="genre-btn" onclick="showCategory('music')">音楽</button>
+            <button class="genre-btn" onclick="showCategory('dance')">ダンス</button>
+            <button class="genre-btn" onclick="showCategory('anime')">アニメ</button>
+            <button class="genre-btn" onclick="showCategory('vtuber')">VTuber</button>
             <button class="genre-btn" onclick="showCategory('cute')">かわいい</button>
+            <button class="genre-btn" onclick="showCategory('other')">その他</button>
         </div>
     </div>
 
